# fesomadealli-data-api

./: README.md  main.py  pyproject.toml
my_files/: data_api.html
my_files/downloads/: data.json  data.parquet
processor/: aggregate.py  clean.py  load_data.py
